--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title style="color:blue">MetaQ</title>
-    <link rel="icon" href="C:\Users\navin\Desktop\Web Developing\MetaQ\images\dolphin.png">
+    <link rel="icon" href="images\dolphin.png">
 
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link rel="stylesheet" href="C:\Users\navin\Desktop\Web Developing\MetaQ\metaq.css">
+    <link rel="stylesheet" href="index.css">
     <script src="https://kit.fontawesome.com/b74fd1f46e.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=IM+Fell+Great+Primer+SC&family=Merriweather:wght@300;700&display=swap" rel="stylesheet">
     </head>
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
       <div class="container-fluid">
 
-        <img class="logo" src="C:\Users\navin\Desktop\Web Developing\MetaQ\images\dolphin.png" alt="logo"><a class="navbar-brand" href="#">MetaQ</a>
+        <img class="logo" src="images\dolphin.png" alt="logo"><a class="navbar-brand" href="#">MetaQ</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -65,7 +65,7 @@
 
         <div class="col-sm-6">
 
-        <img class="hero-img"src="C:\Users\navin\Desktop\Web Developing\MetaQ\images\home-hero.png" alt="home-hero">
+        <img class="hero-img"src="images\home-hero.png" alt="home-hero">
 
       </div>
       <div class="detail-sec col-sm-6">
@@ -85,7 +85,7 @@
     <div class="facility-text row">
       <div class="col-sm-6">
 
-      <img class="facility-img" src="C:\Users\navin\Desktop\Web Developing\MetaQ\images\wallet-illo.png" alt="wallet">
+      <img class="facility-img" src="images\wallet-illo.png" alt="wallet">
     </div>
           <div class="fac-sec col-sm-6">
       <h1>Send, Receive and Swap simply </h1>
@@ -97,7 +97,7 @@
 
     <div class="facility-text row">
       <div class="col-sm-6">
-     <img class="facility-img" src="C:\Users\navin\Desktop\Web Developing\MetaQ\images\Explore-illo.png" alt="Explore">
+     <img class="facility-img" src="images\Explore-illo.png" alt="Explore">
 </div>
      <div class=" fac-sec col-sm-6">
      <h1>Multiple apps support</h1>
@@ -106,8 +106,7 @@
     </div>
 
     <div class="facility-text row">
-      <div class="col-sm-6">
-     <img class="facility-img" src="C:\Users\navin\Desktop\Web Developing\MetaQ\images\Browse-illo.png" alt="Browse">
+      <div class="colimages\Browse-illo.png" alt="Browse">
 
      </div>
            <div class="fac-sec col-sm-6">
@@ -139,10 +138,10 @@
     <!-- EXTERNAL APPLICATION SUPPORT COMPANY DETAILS -->
     <section id="support">
     <div class="row1">
-      <img class="col-lg-4 icon-img" src="C:\Users\navin\Desktop\Web Developing\MetaQ\images\dapp-aave.png" alt="aave">
-      <img class="col-lg-4 icon-img" src="C:\Users\navin\Desktop\Web Developing\MetaQ\images\dapp-axieinfinity.png" alt="axieinfinity">
-      <img class="col-lg-4 icon-img" src="C:\Users\navin\Desktop\Web Developing\MetaQ\images\dapp-compound.png" alt="compound">
-      <img class="col-lg-4 icon-img" src="C:\Users\navin\Desktop\Web Developing\MetaQ\images\dapp-gitcoin.png" alt="gitcoin">
+      <img class="col-lg-4 icon-img" src="images\dapp-aave.png" alt="aave">
+      <img class="col-lg-4 icon-img" src="images\dapp-axieinfinity.png" alt="axieinfinity">
+      <img class="col-lg-4 icon-img" src="images\dapp-compound.png" alt="compound">
+      <img class="col-lg-4 icon-img" src="images\dapp-gitcoin.png" alt="gitcoin">
     </div>
     </section>
 
@@ -161,7 +160,7 @@
       <div class="row">
 
           <div class="col-sm-6">
-      <img class="hoodie-img" src="C:\Users\navin\Desktop\Web Developing\MetaQ\images\hoodie.jpg" alt="hoodie">
+      <img class="hoodie-img" src="images\hoodie.jpg" alt="hoodie">
       </div>
                 <div class="dev-sec col-sm-6">
       <h1>Developers</h1>
@@ -180,7 +179,7 @@
     <!-- FOOTER SECTION -->
     <footer id="footer">
     <div class="row">
-      <h2 class="navbar-brand"><img class="logo" src="C:\Users\navin\Desktop\Web Developing\MetaQ\images\dolphin.png" alt="logo">MetaQ</h2>
+      <h2 class="navbar-brand"><img class="logo" src="images\dolphin.png" alt="logo">MetaQ</h2>
    <div class="col-sm-3">
       <h3>Learn More</h3>
       <a href="#">Hello</a><br>
