--- a/index.html
+++ b/index.html
@@ -104,14 +104,18 @@
      <p>You are always in control when interacting on the new decentralized web.Simplest yet most secure way to connect to blockchain-based applications.</p>
 </div>
     </div>
-
-    <div class="facility-text row">
-      <div class="colimages\Browse-illo.png" alt="Browse">
+  
+<div class="facility-text row">
+      <div class="col-sm-6">
+     <img class="facility-img" src="images\Browse-illo.png" alt="Browse">
 
      </div>
            <div class="fac-sec col-sm-6">
     <h1>Store your Data</h1>
     <p>MetaQ generates passwords and keys on your device, so only you have access to your accounts and data. You always choose what to share and what to keep private.t</p>
+  </div>
+
+
   </div>
 
 
